# eth-sf-2024

./: .gitignore  .gitmodules  README.md
avail/: feedback.md
trueCanvasAPI/go-app/: app.yaml  main.go
trueCanvasApp/: next.config.mjs  package-lock.json  package.json  verifier.js  verifier.ts  verifying_key.json
trueCanvasApp/app/: layout.tsx  page.tsx
trueCanvasApp/app/abi/: ZKPVerifiedNFTABI.ts  ipAssetRegistryABI.ts
trueCanvasApp/app/config/: contractAddresses.ts  evmNetworks.ts
trueCanvasApp/app/gallery/: page.tsx
trueCanvasApp/app/hooks/: useMintNFT.ts  useRegisterIPAsset.ts  useVerifySubmission.ts
trueCanvasApp/app/processing/: page.tsx
trueCanvasApp/app/proven/: page.tsx
trueCanvasApp/app/util/: waitForTransactionReceipt.ts
trueCanvasApp/app/verify/: fileUtils.tsx  page.tsx
trueCanvasApp/components/: Button.tsx  Footer.tsx  Navbar.tsx  PageLayout.tsx
trueCanvasContracts/: Makefile  foundry.toml
trueCanvasContracts/src/: ZKPVerifiedNFT.sol
trueCanvasContracts/test/: ZKPVerifiedNFT.t.sol
true_canvas_rust/: .gitignore
true_canvas_rust/core/: cargo.toml
true_canvas_rust/core/src/: lib.rs
true_canvas_rust/host/: Cargo.toml
true_canvas_rust/host/src/: main.rs
true_canvas_rust/methods/guest/: Cargo.toml
true_canvas_rust/methods/guest/src/: main.rs
