[package]
name = "guest_code_for_trust_canvas"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
ark-sponge = "0.4.0-alpha"
ark-std = "0.4"
ark-ff = "0.4"
ark-ed-on-bls12-381 = "0.4"
ark-serialize = "0.4"
serde = { version = "1.0", features = ["derive"] }
ff = "0.12"
subtle = "2.4"
true-canvas-core = { path = "../../core" }